# mind-reco-public

./: .gitignore  README.md  evaluate-annotated-v2.md  pyproject.toml
modules/: constants.py  evaluation.py  transformation.py
notebooks/: evaluate-annotated-v2.html
