[tool.poetry]
name = "mind-reco"
version = "0.1.0"
description = ""
authors = ["christianllave"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"
wheel = "^0.45.1"
cython = "^3.0.12"
setuptools = "^79.0.0"



[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
